<resources>
    <string name="app_name">Gainz Note</string>
    <string name="titre"> GaINz NoTe</string>
    <string name="version">Version 1.0</string>
    <string name="nb_gainz">21</string>
    <string name="nb_faible">3</string>
    <string name="btn_newSeance">Nouvelle Seance</string>
    <string name="teamFaible">Team Perdant</string>
    <string name="Historique">Mes seances</string>
    <string name="titreNewSeance">Nouvelle Seance</string>
    <string name="date">Date Seance</string>
    <string name="ficListeSeance">ListeSeance</string>
    <string name="newExercice">Ajouter un exercice</string>
    <string name="txtBtnCommencer">Commencer</string>
    <string name="finAjoutModif">Terminer</string>
    <string name="SpinnerGroupeDefault">Selectionne un groupe musculaire</string>
    <string name="Param">Paramètres</string>
    <string name="infoUser">Utilisateur</string>
    <string name="TextTypeDefaut">Selectionne un exercice</string>
    <string name="terminer">terminer</string>
    <string name="stats">Stats</string>
    <string name="title_stat">Statistiques</string>
    <string name="titleModifSeance">Modification de séance</string>

    <string-array id= "test" name="seances">
        <item>Autre</item>
        <item>Dos</item>
        <item>Jambes</item>
        <item>Pectoraux</item>
        <item>Bras</item>
    </string-array>

    <string-array name="parametres">
        <item>Utilisateur</item>
        <item>Exercices</item>
        <item>Aide</item>
    </string-array>

    <string-array name="jours">
        <item>lundi</item>
        <item>mardi</item>
        <item>mercredi</item>
        <item>jeudi</item>
        <item>vendredi</item>
        <item>samedi</item>
        <item>dimanche</item>
    </string-array>

    <string-array name="exercicesStat">
        <item>Développé couché barre</item>
        <item>Développé couché haltères</item>
        <item>Squat</item>
        <item>Curl haltères</item>
        <item>Butterfly</item>
    </string-array>
    <string name="titleCreationSeance">Création de la séance</string>
    <string name="ErrorGettingId">Erreur de récupération de l\'ID</string>
    <string name="type0">Autre</string>
    <string name="Seance">Seance</string>
    <string name="Du">du</string>
</resources>
